--- a/examples/yew_example/index.html
+++ b/examples/yew_example/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yew + Tailwind</title>
-    <link data-trunk rel="rust" />
-    <link data-trunk rel="css" href="styles/output.css" />
+    <link data-trunk rel="tailwind-css" href="./tailwind.css" />
   </head>
   <body>
-    <div id="root"></div>
   </body>
 </html>
